Multitude of performance optimizations